--- a/resources/sass/0-plugins/_scrollx-navbar.scss
+++ b/resources/sass/0-plugins/_scrollx-navbar.scss
@@ -15,7 +15,7 @@
 }
 .pn-ProductNav {
     /* Make this scrollable when needed */
-    overflow-x: auto;
+    overflow-x: clip;
     /* We don't want vertical scrolling */
     overflow-y: hidden;
     /* For WebKit implementations, provide inertia scrolling */
