--- a/resources/sass/2-layouts/_news-body.scss
+++ b/resources/sass/2-layouts/_news-body.scss
@@ -1,3 +1,6 @@
+@import '../malika-variables';
+@import '../mixins';
+
 .outter-list-of-news{
     min-height:500px;
     width:80%;
@@ -25,7 +28,6 @@
                     top: 25px;
                     right: 0;
                     position: absolute;
-                    content: url(../images/gotoresults_searchresulticon.svg);
                     -webkit-transform: rotate(90deg);
                     transform: rotate(90deg);
                 }
@@ -49,7 +51,6 @@
                     top: 25px;
                     right: 0;
                     position: absolute;
-                    content: url(../images/gotoresults_searchresulticon.svg);
                     -webkit-transform: rotate(90deg);
                     transform: rotate(90deg);
                 }
