--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'cerapro-bold';
+    src: url("../fonts/CERAPRO-BOLD.TTF");
+    font-weight: bold;
+}
+@font-face {
+    font-family: 'cerapro-regular';
+    src: url("../fonts/CERAPRO-REGULAR.TTF");
+    font-weight: normal;
+}
+  
 @keyframes loader {
     0% { transform: rotate(0deg);}
     25% { transform: rotate(180deg);}
@@ -39,4 +50,131 @@
     width: 100%;
     background-color: #fff;
     animation: loader-inner 2s infinite ease-in;
+}
+
+
+/* content */
+
+.dropdown-menu > li a:hover img.menu-discount-icon, .dropdown-menu > li.show:hover img.menu-discount-icon, .dropdown-menu > li.show > a:hover img.menu-discount-icon {
+    content: url('../images/discount_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-tv-icon, .dropdown-menu > li.show:hover img.menu-tv-icon, .dropdown-menu > li.show > a:hover img.menu-tv-icon {
+    content: url('../images/tv_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-smartphone-icon, .dropdown-menu > li.show:hover img.menu-smartphone-icon, .dropdown-menu > li.show > a:hover img.menu-smartphone-icon {
+    content: url('../images/smartphone_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-wear-icon, .dropdown-menu > li.show:hover img.menu-wear-icon, .dropdown-menu > li.show > a:hover img.menu-wear-icon {
+    content: url('../images/wear_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-food-icon, .dropdown-menu > li.show:hover img.menu-food-icon, .dropdown-menu > li.show > a:hover img.menu-food-icon {
+    content: url('../images/food_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-laptop-icon, .dropdown-menu > li.show:hover img.menu-laptop-icon, .dropdown-menu > li.show > a:hover img.menu-laptop-icon {
+    content: url('../images/laptop_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-wash_machine-icon, .dropdown-menu > li.show:hover img.menu-wash_machine-icon, .dropdown-menu > li.show > a:hover img.menu-wash_machine-icon {
+    content: url('../images/wash_machine_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-cookroom-icon, .dropdown-menu > li.show:hover img.menu-cookroom-icon, .dropdown-menu > li.show > a:hover img.menu-cookroom-icon {
+    content: url('../images/cookroom_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-health-icon, .dropdown-menu > li.show:hover img.menu-health-icon, .dropdown-menu > li.show > a:hover img.menu-health-icon {
+    content: url('../images/health_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-photo-icon, .dropdown-menu > li.show:hover img.menu-photo-icon, .dropdown-menu > li.show > a:hover img.menu-photo-icon {
+    content: url('../images/photo_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-games-icon, .dropdown-menu > li.show:hover img.menu-games-icon, .dropdown-menu > li.show > a:hover img.menu-games-icon {
+    content: url('../images/games_hover.svg');
+}
+.dropdown-menu > li a:hover img.menu-auto-icon, .dropdown-menu > li.show:hover img.menu-auto-icon, .dropdown-menu > li.show > a:hover img.menu-auto-icon {
+    content: url('../images/auto_hover.svg');
+}
+img.menu-discount-icon:hover {
+    content: url('../images/discount_hover.svg');
+}
+img.menu-tv-icon:hover {
+    content: url('../images/tv_hover.svg');
+}
+img.menu-smartphone-icon:hover {
+    content: url('../images/smartphone_hover.svg');
+}
+img.menu-wear-icon:hover {
+    content: url('../images/wear_hover.svg');
+}
+img.menu-food-icon:hover {
+    content: url('../images/food_hover.svg');
+}
+img.menu-laptop-icon:hover {
+    content: url('../images/laptop_hover.svg');
+}
+img.menu-wash_machine-icon:hover {
+    content: url('../images/wash_machine_hover.svg');
+}
+img.menu-cookroom-icon:hover {
+    content: url('../images/cookroom_hover.svg');
+}
+img.menu-health-icon:hover {
+    content: url('../images/health_hover.svg');
+}
+img.menu-photo-icon:hover {
+    content: url('../images/photo_hover.svg');
+}
+img.menu-games-icon:hover {
+    content: url('../images/games_hover.svg');
+}
+img.menu-auto-icon:hover {
+    content: url('../images/auto_hover.svg');
+}
+.accordion .card .card-header button:after {
+    content: url("../images/gotoresults_searchresulticon.svg");
+}
+form.big-filter-without-title-checkbox button:after {
+    content: url("../images/gotoresults_searchresulticon.svg");
+}  
+#carousel-index .carousel-control-prev-icon {
+    background:url("../images/slider_prev.svg");
+}
+#carousel-index .carousel-control-next-icon {
+    background:url("../images/slider_next.svg");
+}
+.full-banner1{
+    background:url('../images/fullbanner1.jpg');
+}
+.full-banner2{
+    background:url('../images/fullbanner2.jpg');
+}
+.catalog-banner{
+    background:url('../images/catalog-view-banner.png');
+}
+.outter-list-of-news form.big-filter .filter-item .select-all-div:before {
+    content: url('../images/gotoresults_searchresulticon.svg');
+}
+.outter-list-of-news form.big-filter .filter-item label.filter-title:before {
+    content: url('../images/gotoresults_searchresulticon.svg');
+}
+.outter-pay-checkout-cart .inner-pay-checkout-cart form select {
+    background: url("../images/fill-arrow-down.png") no-repeat right;
+}
+.outter-sales .sales-banners .sales-full-banner {
+    background: url('../images/sales-full-banner.png');
+}
+.outter-full-characteristics .accordion-characteristics button:after {
+    content: url("../images/gotoresults_searchresulticon.svg");
+}
+.three-small-banners div.first {
+    background: url('../images/fastbuy.jpg');
+}
+.three-small-banners div.second {
+    background: url('../images/gifts.jpg');
+}
+.three-small-banners div.third {
+    background: url('../images/1plus1.jpg');
+}
+.outter-list-of-videos form.big-filter .filter-item .select-all-div:before {
+    content: url(../images/gotoresults_searchresulticon.svg);
+}
+.outter-list-of-videos form.big-filter .filter-item label.filter-title:before {
+    content: url(../images/gotoresults_searchresulticon.svg);
 }
