--- a/resources/sass/2-layouts/_index-shop-views.scss
+++ b/resources/sass/2-layouts/_index-shop-views.scss
@@ -1,10 +1,10 @@
 .shops{
     width:100%;
-    height:920px;
+    height:975px;
     background:$bg_grey_color;
     .outter-shops{
         width:100%;
-        height:835px; 
+        height:850px; 
         background:white;
         position:relative;
         .all-shops{
@@ -57,7 +57,7 @@
     }
 }
 .shops-2r{
-    height:400px;
+    // height:400px;
     margin-top:1%;
     button.owl-prev,
     button.owl-next{
@@ -67,7 +67,7 @@
     .first-item{
         // width:33%;
         width:28%;
-        height:400px;
+        // height:400px;
         border:1px solid $item_border_color;
         background:white;
         .shop-name-logo{
@@ -86,7 +86,7 @@
         }
         .single-img{
             padding:15px;
-            height:400px;
+            // height:400px;
             img{
                 height:auto;
                 width:100%;
@@ -145,4 +145,107 @@
             }
         }
     } 
+}
+@media all and (max-width:1250px){
+    .shops {
+        height: 965px;
+        .outter-shops {
+            height: 855px;
+            .all-shops {
+                .shops-2r {
+                    .first-item {
+                        width: 42%;
+                    }
+                    .shops-2r-inner {
+                        width: 58%;
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:1140px){
+    .shops {
+        height: 910px;
+        .outter-shops {
+            height: 810px;
+        }
+    }
+}
+@media all and (max-width:922px){
+    .shops {
+        height: 850px;
+        .outter-shops {
+            height: 755px;
+        }
+    }
+}
+@media all and (max-width:799px){
+    .shops {
+        height: 1050px;
+        .outter-shops {
+            height: 955px;
+        }
+    }
+}
+@media all and (max-width:768px){
+    .shops {
+        height: 1730px;
+        .outter-shops {
+            height: 1640px;
+            top: 0%;
+            .all-shops {
+                top: -1%;
+                .shops-2r {
+                    flex-direction: column;
+                    height: auto;
+                    .first-item {
+                        width: 100%;
+                        height: auto;
+                        .single-img {
+                            height: auto;
+                        }
+                    }
+                    .shops-2r-inner {
+                        width: 100%;
+                        .palette-items {
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:700px){
+    .shops {
+        height: 1600px;
+        .outter-shops {
+            height: 1500px;
+        }
+    }
+}
+@media all and (max-width:600px){
+    .shops {
+        height: 1430px;
+        .outter-shops {
+            height: 1330px;
+        }
+    }
+}
+@media all and (max-width:500px){
+    .shops {
+        height: 1250px;
+        .outter-shops {
+            height: 1160px;
+        }
+    }
+}
+@media all and (max-width:400px){
+    .shops {
+        height: 1100px;
+        .outter-shops {
+            height: 1025px;
+        }
+    }
 }
