--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -1,13 +1,13 @@
-@font-face{
-    font-family:'cerapro-bold';
-    src:url("../fonts/cerapro-bold.ttf");
-    font-weight:bold;
-}
-@font-face{
-    font-family:'cerapro-regular';
-    src:url("../fonts/cerapro-regular.ttf");
-    font-weight:normal;
-}
+// @font-face{
+//     font-family:'cerapro-bold';
+//     src:url("../fonts/cerapro-bold.ttf");
+//     font-weight:bold;
+// }
+// @font-face{
+//     font-family:'cerapro-regular';
+//     src:url("../fonts/cerapro-regular.ttf");
+//     font-weight:normal;
+// }
 body{
     @include fontRegular;
     background:#ffffff;
@@ -75,7 +75,7 @@ h5.footer.title{
 h6.title{
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: pre-wrap;
     font-size:20px;
     text-align: start;
     width:100%;
@@ -89,6 +89,7 @@ p.description{
 p.sub-title{
     color: $comment_color;
     font-size:18px;
+    text-align: left;
 }
 .btn-yellow{
     border-radius:23px;
@@ -99,11 +100,18 @@ p.sub-title{
     text-align:center;
 }
 .btn-red{
-    @extend .btn-yellow;
+    border-radius:23px;
+    padding:10px 20px;
+    color:white;
+    border:none;
+    text-align:center;
     background:#cd2c2c;
 }
 .btn-follow{
-    @extend .btn-yellow;
+    border-radius:23px;
+    color:white;
+    border:none;
+    text-align:center;
     background:#11da53;
     padding:13px 25px;
     font-size:15px;
@@ -128,9 +136,23 @@ span.sale.big{
     }
 }
 span.sale.small{
-    @extend span.sale.big;
     padding:5px 20px;
     font-size:18px;
+    position:absolute;
+    bottom:5px;
+    right:0;
+    color:white;
+    border-radius:15px;
+    text-transform:uppercase;
+    text-align: center;
+    background:$bg_discount;
+    white-space: nowrap;
+    span{
+        display: inline-block;
+        span{
+            display: inline-block;
+        }
+    }
 }
 span.new-product{
     background:$bg_new_item;
@@ -148,26 +170,32 @@ span.new-product{
     }
 }
 button.owl-prev, .owl-carousel .owl-nav button.owl-prev{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     background:#668eff;
     width:40px;
     height:40px;
     border-radius:23px;
-    left:-2%;
-    top:50%;
+    left:0%;
+    top:35%;
     outline: none;
     &:hover{
         background:#668eff;
     }
 }
 button.owl-next, .owl-carousel .owl-nav button.owl-next{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     background: #668eff;
     width:40px;
     height:40px;
     border-radius:23px;
-    right:-2%;
-    top:50%;
+    right:0%;
+    top:35%;
     outline: none;
     &:hover{
         background:#668eff;
@@ -268,7 +296,6 @@ nav ol.breadcrumb{
                     top: 25px;
                     right: 0;
                     position: absolute;
-                    content:url("../images/gotoresults_searchresulticon.svg");
                     transform: rotate(90deg);
                 }
             }
@@ -815,7 +842,6 @@ form.big-filter-without-title-checkbox{
             top:50%;
             right:10px;
             content: '\002B';
-            content:url("../images/gotoresults_searchresulticon.svg");
             transform: rotate(-90deg);
             transition: 0.4s;
         }
@@ -874,7 +900,86 @@ form.big-filter-without-title-checkbox{
     }
 }
 form.big-filter-with-title-checkbox{
-    @extend form.big-filter-without-title-checkbox;
+    width:18%;
+    margin-top:50px;
+    text-align: start;
+    @include displayFlex(flex-start, column, flex-start);
+    button{
+        width:100%;
+        background:transparent;
+        border:none;
+        border-bottom:1px solid $link_hover_color;
+        cursor: pointer;
+        padding: 18px 0;
+        outline: none;
+        font-size: 18px;
+        transition: 0.4s;
+        text-align:left;
+        position:relative;
+        @include fontBold;
+        &:after{
+            width: 10px;
+            height: 10px;
+            position:absolute;
+            top:50%;
+            right:10px;
+            content: '\002B';
+            transform: rotate(-90deg);
+            transition: 0.4s;
+        }
+        &.active:after{
+            transform: rotate(90deg);
+            transition: 0.4s;
+        }
+    }
+    .panel{
+        width:100%;
+        display: block;
+        font-size:18px;
+        padding:10px 0;
+        margin-bottom:1%;
+        .custom-conrol{
+            margin-bottom:1.5%;
+        }
+        .outter-range-slider{
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+            margin:0 !important;
+            span{
+                font-size:18px;
+                line-height: 40px;
+            }
+            .form-group{
+                @include displayFlex(space-between,row, center);
+                input{
+                    width:45%;
+                    color:$title_color;
+                    border-radius:12px;
+                }
+            }
+        }
+        a.show-more{
+            padding-left:30px;
+            color:$title_color;
+            font-size:18px;
+            margin-top:1%;
+            text-decoration: underline;
+        }
+       
+    }
+    input#submit{
+        background:$item_price_color;
+        color:white;
+        font-size:16px;
+        padding:15px 0;
+        width:100%;
+        white-space:nowrap;
+        text-align:center;
+        border-radius:23px;
+        margin:15% auto 0;
+        font-weight:bold;
+    }
     .filter-item{
         position:relative;
         width:100%;
@@ -914,7 +1019,7 @@ form.big-filter-with-listof-checkbox{
     }
 }
 form.small-filter{
-    @extend form.big-filter;
+    // @extend form.big-filter;
     display: none;
     .card{
         .card-header{
