changes  and fixes warning mix

--- a/public/css/colorpicker.css
+++ b/public/css/colorpicker.css
@@ -1,1 +1,2 @@
-@import url(c:\Users\Malika\Downloads\OSPanel\domains\rpo\magazin.shop\public\vendor\bootstrap-colorpicker\dist\css\bootstrap-colorpicker.css);
+@import url(.\public\vendor\bootstrap-colorpicker\dist\css\bootstrap-colorpicker.css);
+@import url();
