--- a/resources/sass/2-layouts/_pay-checkout-cart.scss
+++ b/resources/sass/2-layouts/_pay-checkout-cart.scss
@@ -2,7 +2,7 @@
     width:100%;
     background:white;
     padding:2% 10%;
-    @include displayFlex(flex-start, row, start);
+    @include displayFlex(flex-start, row, flex-start);
     .ur-cart{
         width:20%;
         text-align: left;
@@ -409,7 +409,7 @@
 }
 @media all and (max-width:800px){
     .outter-pay-checkout-cart{
-        @include displayFlex(flex-start, column, start);
+        @include displayFlex(flex-start, column, flex-start);
         p{
             font-size:16px;
             line-height:22px;
@@ -482,7 +482,7 @@
         padding:2% 8%;
         .inner-pay-checkout-cart{
             .check-labels{
-                @include displayFlex(flex-start, column, start);
+                @include displayFlex(flex-start, column, flex-start);
                 div{
                     margin:1% 0;
                 }
