--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 @import "mixins";
 
 @import "0-plugins/plugins-index";
+@import "0-plugins/range-slider";
 @import url("/css/mybazar-fonts.css");
 @import "base";
 
