--- a/resources/sass/2-layouts/_index-shop-views.scss
+++ b/resources/sass/2-layouts/_index-shop-views.scss
@@ -65,7 +65,6 @@
     }
     @include displayFlex(flex-start, row, flex-start);
     .first-item{
-        // width:33%;
         width:33%;
         // height:400px;
         border:1px solid $item_border_color;
@@ -88,7 +87,7 @@
             padding:15px;
             // height:400px;
             img{
-                height:auto;
+                // height:auto;
                 width:100%;
             }
         }
