--- a/resources/sass/2-layouts/_carousel-index.scss
+++ b/resources/sass/2-layouts/_carousel-index.scss
@@ -2,6 +2,7 @@
     width:100%;
     height:400px;
     background:rgba(117, 0, 255, 0);
+    margin-top: 4px;
     .carousel-control-prev-icon {
         background-position: center;
         background-repeat: no-repeat;
