--- a/resources/sass/2-layouts/_nav-header.scss
+++ b/resources/sass/2-layouts/_nav-header.scss
@@ -44,8 +44,8 @@ nav#main_navbar{
           display:inline-flex;
           align-items:center;
           padding:10px 20px;
-          border-top-left-radius: 5px;
-          border-top-right-radius: 5px;
+          border-radius: 5px;
+          // border-top-right-radius: 5px;
           @include fontBold;
           &::after{
             border:none;
