sms and auth page responsiveness

--- a/resources/sass/2-layouts/_auth-body.scss
+++ b/resources/sass/2-layouts/_auth-body.scss
@@ -71,6 +71,7 @@
             label{
                 font-size:18px;
                 color:black;
+                margin-top:5%;
             }
             .social-app-icons{
                 width:100%;
