--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2627,7 +2627,7 @@ form.small-filter .card .card-body a.show-more {
 }
 
 #page .header .menu-logo {
-  width: 50%;
+  width: 35%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2653,7 +2653,7 @@ form.small-filter .card .card-body a.show-more {
 }
 
 #page .header .other-icons {
-  width: 47%;
+  width: 55%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2671,9 +2671,58 @@ form.small-filter .card .card-body a.show-more {
 }
 
 #page .header .other-icons a i {
-  font-size: 22px;
-  margin-right: 30px;
+  font-size: 30px;
+  margin-right: 20px;
   text-align: center;
+}
+
+#page .header .other-icons a button.search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #0042ff;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+#page .header .other-icons a button.search i {
+  position: relative;
+  font-size: 17px;
+  margin: 0;
+}
+
+#page .header .other-icons a button.search i span {
+  width: 18px;
+  height: 18px;
+  font-size: 10px;
+  color: #fff;
+  line-height: 18px;
+  position: absolute;
+  border-radius: 12px;
+  display: block;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  font-family: 'CERAPRO-BOLD';
+  background: #f42c48;
+}
+
+#page .header .other-icons a button.search i span.counter {
+  top: -23px;
+  right: -21px;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 #page .header .other-icons a.cart i {
@@ -3020,7 +3069,8 @@ nav#menu .mm-navbar__title span {
     display: none !important;
   }
   #page .header .other-icons a i {
-    margin-right: 20px;
+    font-size: 18px;
+    margin-right: 10px;
   }
 }
 
@@ -3049,9 +3099,26 @@ nav#menu .mm-navbar__title span {
   #page .header .menu-logo img {
     width: 95px;
   }
+  #page .header .other-icons a button.search {
+    margin-right: 5px;
+  }
   #page .header .other-icons a i {
     font-size: 18px;
-    margin-right: 10px;
+    margin-right: 8px;
+  }
+}
+
+@media all and (max-width: 300px) {
+  #page .header .other-icons a button.search {
+    width: 28px;
+    height: 28px;
+  }
+  #page .header .other-icons a button.search i {
+    font-size: 13px;
+  }
+  #page .header .other-icons a i {
+    font-size: 15px;
+    margin-right: 5px;
   }
 }
 
@@ -6937,6 +7004,7 @@ footer .footer-outter .social-contacts .contacts a.email::before {
 .outter-sign-reg .inner-sign-reg .sign-in-through label {
   font-size: 18px;
   color: black;
+  margin-top: 5%;
 }
 
 .outter-sign-reg .inner-sign-reg .sign-in-through .social-app-icons {
@@ -7185,6 +7253,57 @@ footer .footer-outter .social-contacts .contacts a.email::before {
   font-size: 18px;
   color: #0042ff;
   margin: 1% 0;
+}
+
+@media all and (max-width: 910px) {
+  .outter-resend-sms .inner {
+    width: 45%;
+  }
+}
+
+@media all and (max-width: 750px) {
+  .outter-resend-sms .inner {
+    width: 50%;
+  }
+}
+
+@media all and (max-width: 650px) {
+  .outter-resend-sms .inner {
+    width: 55%;
+  }
+  .outter-resend-sms .inner a {
+    font-size: 15px;
+  }
+  .outter-resend-sms .inner form input#submit {
+    font-size: 16px;
+  }
+}
+
+@media all and (max-width: 530px) {
+  .outter-resend-sms .inner {
+    width: 56%;
+  }
+  .outter-resend-sms .inner a {
+    font-size: 14px;
+  }
+  .outter-resend-sms .inner form label {
+    font-size: 18px;
+  }
+  .outter-resend-sms .inner form input#submit {
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 430px) {
+  .outter-resend-sms .inner {
+    width: 75%;
+  }
+}
+
+@media all and (max-width: 325px) {
+  .outter-resend-sms .inner {
+    width: 80%;
+  }
 }
 
 .list-of-brands {
