--- a/resources/sass/2-layouts/_sms-body.scss
+++ b/resources/sass/2-layouts/_sms-body.scss
@@ -50,3 +50,64 @@
         }
     }
 }
+@media all and (max-width:910px){
+    .outter-resend-sms{
+        .inner{
+            width:45%;
+        }
+    }
+}
+@media all and (max-width:750px){
+    .outter-resend-sms{
+        .inner{
+            width:50%;
+        }
+    }
+}
+@media all and (max-width:650px){
+    .outter-resend-sms{
+        .inner{
+            width:55%;
+            a{
+                font-size:15px;
+            }
+            form{
+                input#submit{
+                    font-size:16px;
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:530px){
+    .outter-resend-sms{
+        .inner{
+            width:56%;
+            a{
+                font-size:14px;
+            }
+            form{
+                label{
+                    font-size:18px;
+                }
+                input#submit{
+                    font-size:14px;
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:430px){
+    .outter-resend-sms{
+        .inner{
+            width:75%;
+        }
+    }
+}
+@media all and (max-width:325px){
+    .outter-resend-sms{
+        .inner{
+            width:80%;
+        }
+    }
+}
